# kepler

./: .gitignore  .prettierrc.yaml  .prettierrc.yml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: deploy_frontend.yaml  test_frontend.yaml
assets/: index.196217b9.js  index.4819ce83.js  index.55a86f9c.js  index.6029e06f.css  index.73c84d15.css  index.87383f20.js  index.87609ebb.css  index.93d321c2.js  index.9faf830c.css  index.9ff87108.js  index.a3647a03.js  index.ad52217e.js  index.afbb9779.css  index.c64eefe4.css  index.cf291aff.css  index.d0e1e44f.css  index.dc2a935c.js  index.df65c468.css  index.e1305f50.js  index.ec045ffd.css  index.f41f0e1c.js  index.f5fb9b90.css  index.f9baa1b3.js  index.fb1024c6.js
backend/: pyproject.toml
backend/chat_session/: backends.py  datatypes.py  gpt3.py  server.py
backend/chat_session/robots/: base_robot.py  call_center_agent.py
backend/chat_session/settings/: companies.py
backend/demos/: call_center_agent.py
backend/tests/: test_backends.py  test_base_robot.py  test_datatypes.py  test_gpt3.py  test_server.py
backend/tests/robots/: test_call_center_robot.py
browser_demo/: README.md
browser_demo/src/: index.tsx
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  Prompt.tsx  index.tsx
kepler/: package-lock.json  package.json  server.ts
kepler/Kepler/: Kepler.ts
kepler/LanguageModel/: Gpt3.ts  Mock.ts  index.ts
src/: App.tsx  Database.ts  Prompt.tsx  index.tsx  speechRecognizer.ts
src/UUID/: UUID.ts  (+3 more)
test/: kepler.test.ts  prompt.test.ts
(+81 files in other folders)
