[tool.poetry]
name = "chat_session"
version = "0.1.0"
description = "Kepler's backend chatbot query system."
authors = ["Matt Zhang <set.stun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
pytest = "^7.2.0"
openai = "^0.25.0"
uvicorn = "^0.20.0"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
